# trade_data_explorer

./: .gitignore  README.md  observablehq.config.js  package-lock.json  package.json  pyproject.toml
.github/workflows/: deploy.yml  purge_cache.yml  staging.yml
src/: faqs.md  index.md  multi.md  single-view.md  style.css
src/components/: DownloadButton.jsx  DropdownMenu.jsx  MultiSelect.jsx  NavMenu.jsx  ONEVisual.jsx  RangeInput.jsx  RankTable.jsx  SegmentedToggle.jsx  ToggleSwitch.jsx  TradePlot.jsx  dataQueries.js  inputValues.js  utils.js
src/data/: config.py
src/data/scripts/: country_aggregates.csv.py  helper_functions.py  trade.py  transformations.py
src/data/settings/: countries.json  country_groups.json
src/js/: colors.js  dataQueries.js  downloadHelpers.js  downloadPlotImage.js  downloads.js  embed.js  inputValues.js  multiSelect.js  options.js  rangeInput.js  stateDefaults.js  textGenerators.js  utils.js  visuals.js
src/styles/: base.css  embed.css  layout.css  responsive.css
src/styles/components/: downloads.css  menu.css  methodology.css  plots-tables.css  plots.css  range-input.css  settings.css  status.css  tables.css
