[project]
name = "trade-explorer"
version = "0.1.0"
description = "Explore trade data"
requires-python = ">=3.13"
dependencies = [
    "bblocks-places>=0.0.4",
    "ftfy>=6.3.1",
    "oda-data>=2.2.2.post1",
    "pandas>=2.3.3",
    "pathlib>=1.0.1",
    "pyarrow>=20.0.0,<21.0.0",
    "pydeflate==2.3.3",
]

[dependency-groups]
dev = [
    "ruff>=0.13.3",
]
